--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "material-icons": "^1.1.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.5",
+    "vue-js-modal": "^2.0.1",
     "vue-router": "^3.2.0",
     "vuesax": "^3.12.2",
     "vuex": "^3.4.0"
